{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "f255a7e4-4d75-f84a-1873-6e0af470c1d2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484752921218:security-group/sg-01fe97ea81a3181b0",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-01fe97ea81a3181b0",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06ab4d4d91b06b4c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484752921218:security-group/sg-017e4986785475129",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-017e4986785475129",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "share-test-vpc_tls20230314182239443500000001",
            "name_prefix": "share-test-vpc_tls",
            "owner_id": "484752921218",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "test",
              "owners": "share"
            },
            "tags_all": {
              "environment": "test",
              "owners": "share"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ab4d4d91b06b4c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484752921218:vpc-endpoint/vpce-01bacb72d0409b466",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-01bacb72d0409b466",
            "owner_id": "484752921218",
            "policy": "{\"Statement\":[{\"Action\":\"s3:*\",\"Condition\":{\"StringNotEquals\":{\"aws:sourceVpce\":\"vpc-06ab4d4d91b06b4c7\"}},\"Effect\":\"Deny\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-083c954b3593bdf1a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Name": "s3-vpc-endpoint",
              "Project": "Secret",
              "environment": "test",
              "owners": "share"
            },
            "tags_all": {
              "Endpoint": "true",
              "Name": "s3-vpc-endpoint",
              "Project": "Secret",
              "environment": "test",
              "owners": "share"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06ab4d4d91b06b4c7"
          },
          "dependencies": [
            "aws_security_group.vpc_tls",
            "data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "data.aws_iam_policy_document.generic_endpoint_policy",
            "data.aws_iam_policy_document.s3_endpoint_policy",
            "data.aws_security_group.default",
            "data.aws_subnets.selected",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484752921218:vpc-endpoint/vpce-0a701c8742364e139",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0a701c8742364e139",
            "ip_address_type": "ipv4",
            "owner_id": "484752921218",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-017e4986785475129",
              "sg-01fe97ea81a3181b0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Project": "Secret",
              "environment": "test",
              "owners": "share"
            },
            "tags_all": {
              "Endpoint": "true",
              "Project": "Secret",
              "environment": "test",
              "owners": "share"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06ab4d4d91b06b4c7"
          },
          "dependencies": [
            "aws_security_group.vpc_tls",
            "data.aws_iam_policy_document.dynamodb_endpoint_policy",
            "data.aws_iam_policy_document.generic_endpoint_policy",
            "data.aws_iam_policy_document.s3_endpoint_policy",
            "data.aws_security_group.default",
            "data.aws_subnets.selected",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}